[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/HUD/ItemBar/HeartUIEmpty.png" type="Texture" id=1]
[ext_resource path="res://UI/HUD/ItemBar/ItemBarSlot/ItemBarSlot.gd" type="Script" id=2]
[ext_resource path="res://World/Grass.png" type="Texture" id=3]

[node name="ItemBarSlot" type="Control"]
script = ExtResource( 2 )

[node name="BackgroundTexture" type="TextureRect" parent="."]
margin_left = -7.0
margin_right = 7.0
margin_bottom = 14.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="ItemDisplay" type="TextureRect" parent="."]
margin_left = -6.0
margin_right = 6.0
margin_bottom = 14.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
